<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_orange_horizontal"
    android:orientation="vertical"
    tools:context="com.dinus.ec.main.RegisterActivity">

    <include
        layout="@layout/toolbar_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_register"
                android:background="@color/purple_gradient_dark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/welcome"
                    android:textAllCaps="false"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_medium" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <TextView
                    fontPath="fonts/Pangram-Bold.otf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/default_padding"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/large_padding"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding"
                    android:paddingTop="@dimen/large_padding">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/medium_padding"
                        android:textColorHint="@color/text_black">

                        <EditText
                            android:id="@+id/et_nama"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_height"
                            android:drawableLeft="@drawable/ic_nik_black"
                            android:drawablePadding="@dimen/medium_padding"
                            android:hint="@string/hint_name"
                            android:inputType="textCapWords"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/text_small" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_nik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/medium_padding"
                        android:textColorHint="@color/text_black">

                        <EditText
                            android:id="@+id/et_nik"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_height"
                            android:drawableLeft="@drawable/ic_nik_black"
                            android:drawablePadding="@dimen/medium_padding"
                            android:hint="@string/hint_no_id"
                            android:inputType="number"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/text_small" />
                    </android.support.design.widget.TextInputLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_tgl_lahir"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/medium_padding"
                            android:textColorHint="@color/text_black">

                            <EditText
                                android:id="@+id/et_tgl_lahir"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/edittext_height"
                                android:clickable="false"
                                android:drawableLeft="@drawable/ic_nik_black"
                                android:drawablePadding="@dimen/medium_padding"
                                android:editable="false"
                                android:enabled="false"
                                android:hint="@string/hint_tgl_lahir"
                                android:inputType="text"
                                android:maxLength="15"
                                android:maxLines="1"
                                android:textColor="@color/text_black"
                                android:textSize="@dimen/text_small" />
                        </android.support.design.widget.TextInputLayout>

                        <View
                            android:id="@+id/v_tgl_lahir"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"></View>
                    </FrameLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_jabatan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/medium_padding"
                        android:textColorHint="@color/text_black">

                        <EditText
                            android:id="@+id/et_jabatan"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_height"
                            android:drawableLeft="@drawable/ic_nik_black"
                            android:drawablePadding="@dimen/medium_padding"
                            android:hint="@string/hint_jabatan"
                            android:inputType="textCapWords"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/text_small" />
                    </android.support.design.widget.TextInputLayout>


                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_lokasi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/medium_padding"
                            android:textColorHint="@color/text_black">

                            <com.dinus.ec.widget.DelayAutoCompleteTextView
                                android:id="@+id/et_lokasi"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/edittext_height"
                                android:drawableLeft="@drawable/ic_nik_black"
                                android:drawablePadding="@dimen/medium_padding"
                                android:hint="@string/hint_lokasi"
                                android:inputType="textCapWords"
                                android:maxLines="1"
                                android:textColor="@color/text_black"
                                android:textSize="@dimen/text_small" />
                        </android.support.design.widget.TextInputLayout>

                    </FrameLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_sandi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/medium_padding"
                        android:textColorHint="@color/text_black">

                        <EditText
                            android:id="@+id/et_sandi"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_height"
                            android:drawableLeft="@drawable/ic_password_black"
                            android:drawablePadding="@dimen/medium_padding"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/text_small" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_re_sandi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/large_padding"
                        android:textColorHint="@color/text_black">

                        <EditText
                            android:id="@+id/et_re_sandi"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_height"
                            android:drawableLeft="@drawable/ic_password_black"
                            android:drawablePadding="@dimen/medium_padding"

                            android:hint="@string/hint_re_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/text_black"
                            android:textSize="@dimen/text_small" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginLeft="@dimen/default_padding"
                        android:layout_marginRight="@dimen/default_padding"
                        android:background="@color/purple_gradient_dark"
                        android:text="@string/btn_register"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/text_small" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
