<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dinus.ec.main.ProfileEditActivity">

    <include
        layout="@layout/toolbar_gradient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="false"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/ctl_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="false"
                app:contentScrim="@color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_profile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter" />

                        <ProgressBar
                            android:id="@+id/pb_image_profile"
                            style="@style/pbTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:theme="@style/pbTheme" />

                        <ImageView
                            android:id="@+id/iv_camera"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_camera_white"
                            android:layout_gravity="center"/>


                    </FrameLayout>

                </LinearLayout>

            </android.support.design.widget.CollapsingToolbarLayout>


        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/ns_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:focusableInTouchMode="true"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text_grey">

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edittext_height"
                        android:hint="@string/hint_name"
                        android:inputType="textCapWords"
                        android:textColor="@color/text_grey"
                        android:textSize="@dimen/text_default"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/v_profile_edit_sandi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/default_padding"
                    android:paddingBottom="@dimen/default_padding"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/text_purple_dark"
                        android:text="Ganti Password"
                        android:textSize="@dimen/text_default"  />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/text_purple_dark" />

                <LinearLayout
                    android:id="@+id/v_profile_edit_sandi_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_padding"
                        android:textColorHint="@color/text_grey">

                        <EditText
                            android:id="@+id/et_old_password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_height"
                            android:hint="@string/hint_old_password"
                            android:inputType="textPassword"
                            android:textColor="@color/text_grey"
                            android:textSize="@dimen/text_default"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/text_grey">

                        <EditText
                            android:id="@+id/et_new_password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_height"
                            android:hint="@string/hint_new_password"
                            android:inputType="textPassword"
                            android:textColor="@color/text_grey"
                            android:textSize="@dimen/text_default"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_re_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/text_grey">

                        <EditText
                            android:id="@+id/et_re_password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_height"
                            android:hint="@string/hint_re_password"
                            android:inputType="textPassword"
                            android:textColor="@color/text_grey"
                            android:textSize="@dimen/text_default"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
                <View
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:id="@+id/v_profil_edit_bottom"
                    android:layout_width="match_parent"
                    android:visibility="invisible"
                    android:layout_height="1dp" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/large_padding"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_marginRight="@dimen/default_padding"
                    android:background="@drawable/bg_gradient_orange_horizontal"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/text_white"
                    android:text="@string/btn_save"/>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>

